Fix iOS Safari keyboard gap by using fixed positioning with visualViewport offset

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,7 @@
 
 :root {
   --vvh: 100dvh;
+  --vv-offset-top: 0px;
 }
 
 body {
